@@ -6,7 +6,6 @@ import static org.mockito.Mockito.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -27,7 +26,7 @@ import com.nhnacademy.back.product.category.service.CategoryService;
 import com.nhnacademy.back.product.category.service.impl.CategoryServiceImpl;
 
 @ExtendWith(MockitoExtension.class)
-public class CategoryServiceTest {
+class CategoryServiceTest {
 	@InjectMocks
 	private CategoryServiceImpl categoryService;
 	@Mock
@@ -147,7 +146,7 @@ public class CategoryServiceTest {
 
 		List<String> childNames = parentDTO.getChildren().stream()
 			.map(ResponseCategoryDTO::getCategoryName)
-			.collect(Collectors.toList());
+			.toList();
 
 		assertThat(childNames).containsExactlyInAnyOrder("Child 1", "Child 2");
 
@@ -198,8 +197,8 @@ public class CategoryServiceTest {
 	}
 
 	@Test
-	@DisplayName("get categories by id")
-	void get_categories_by_id_test() {
+	@DisplayName("get categories by id - success")
+	void get_categories_by_id_success_test() {
 		// given
 		ResponseCategoryDTO grandChild = new ResponseCategoryDTO(4L, "Grandchild", new ArrayList<>());
 		ResponseCategoryDTO child1 = new ResponseCategoryDTO(2L, "Child 1", List.of(grandChild));
@@ -228,6 +227,22 @@ public class CategoryServiceTest {
 		assertThat(child2Dto.getChildren()).isEmpty();
 
 		verify(categoryJpaRepository, never()).findById(any());
+	}
+
+	@Test
+	@DisplayName("get categories by id - fail")
+	void get_categories_by_id_fail_test() {
+		// given
+		ResponseCategoryDTO grandChild = new ResponseCategoryDTO(4L, "Grandchild", new ArrayList<>());
+		ResponseCategoryDTO child1 = new ResponseCategoryDTO(2L, "Child 1", List.of(grandChild));
+		ResponseCategoryDTO child2 = new ResponseCategoryDTO(3L, "Child 2", new ArrayList<>());
+		ResponseCategoryDTO root = new ResponseCategoryDTO(1L, "Root", List.of(child1, child2));
+
+		when(self.getCategories()).thenReturn(List.of(root, child1, child2, grandChild));
+
+		// when & then
+		assertThatThrownBy(() -> categoryService.getCategoriesById(5L))
+			.isInstanceOf(CategoryNotFoundException.class);
 	}
 
 	@Test
@@ -266,6 +281,21 @@ public class CategoryServiceTest {
 	void update_category_fail2_test() {
 		// given
 		RequestCategoryDTO request = new RequestCategoryDTO("new name category");
+
+		Category category = new Category("category", null);
+		when(categoryJpaRepository.findById(anyLong())).thenReturn(Optional.of(category));
+		when(categoryJpaRepository.existsByParentIsNullAndCategoryName(anyString())).thenReturn(true);
+
+		// when & then
+		assertThatThrownBy(() -> categoryService.updateCategory(2L, request))
+			.isInstanceOf(CategoryAlreadyExistsException.class);
+	}
+
+	@Test
+	@DisplayName("update category - fail3")
+	void update_category_fail3_test() {
+		// given
+		RequestCategoryDTO request = new RequestCategoryDTO("new name category");
 		Category parentCategory = mock(Category.class);
 		when(parentCategory.getCategoryId()).thenReturn(1L);
 
@@ -274,7 +304,7 @@ public class CategoryServiceTest {
 		when(categoryJpaRepository.existsByParentCategoryIdAndCategoryName(anyLong(), anyString())).thenReturn(true);
 
 		// when & then
-		assertThatThrownBy(() -> categoryService.updateCategory(2L, request))
+		assertThatThrownBy(() -> categoryService.updateCategory(3L, request))
 			.isInstanceOf(CategoryAlreadyExistsException.class);
 	}
 
@@ -319,7 +349,6 @@ public class CategoryServiceTest {
 	@DisplayName("delete category - fail1")
 	void delete_category_fail1_test() {
 		// given
-		Category category = new Category("category", null);
 		when(categoryJpaRepository.findById(anyLong())).thenReturn(Optional.empty());
 
 		// when & then
